<resources>
    <string name="app_name">Formulario</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="pasatiempos">Pasatiempos</string>
    <string name="Bailar">Bailar</string>
    <string name="Cantar">Cantar</string>
    <string name="Correr">Correr</string>
    <string name="Leer">Leer</string>
    <string name="Login">Login</string>
    <string name="Password">Password</string>
    <string name="guardar">Guardar</string>
    <string name="ConfirmPassword">Confirm Password</string>
    <string name="Email">E-mail</string>
    <string name="Nacimiento">Fecha de Nacimiento</string>
    <string name="Ciudad">Ciudad de Nacimiento</string>

</resources>
